=======
HISTORY
=======

1.1rc14 (Unreleased)
--------------------

- Removed redundant `Image list` from image dialog. This closes
  http://dev.plone.org/plone/ticket/10342.
  [hannosch]

- Adopted TinyMCE's build process to generate a minified version of the main
  JavaScript file.
  [hannosch]

- Changed css registration, so it doesn't cause an extra CSS download, but is
  merged with the other anonymous CSS files.
  [hannosch]

- Set 'plain' as default table class.
  [robgietema]

- Fixed issue with style dropdown in IE.
  [robgietema]

- Fixed issue with inline editing of collections.
  [robgietema]

- Set ordering of link and image dialogs to getObjPositionInParent.
  [robgietema]

- Refactor resolveuid to use portal_catalog and not waking up object.
  [toutpt]

- Add tinymce-plone3.css. fix #10683: TinyMCE / Plone3.3 display text too big
  [toutpt]

1.1rc13 (2010-07-02)
--------------------

- Updated to upstream translations.
  table_dlg_scope_col and table_dlg_scope_row msgids doesn't exist
  in tinymce domain, replaced by table_col and table_row in 
  skins/tinymce/plugins/table/cell.htm.pt
  [vincentfretin]

- Internationalized list/definition style names
  [thomasdesvenain]

- French translations
  [thomasdesvenain]

- Fix icons in link dialog listing. This closes
  http://dev.plone.org/plone/ticket/10665
  [davisagli]

- Fix icons in image dialog listings. This closes
  http://dev.plone.org/plone/ticket/10538
  [davisagli]

- Reset font size for tables in content.css. This fixes
  http://dev.plone.org/plone/ticket/10536
  [davisagli]

- Apply block format changes even when multiple blocks are selected.
  Fixes http://dev.plone.org/plone/ticket/10145
  [davisagli]

- Look up scale sizes for image types using the field called 'image',
  not the primary field. (They are not necessarily the same.) Fixes
  http://dev.plone.org/plone/ticket/10227
  [davisagli]

- Fix issue when handling images with apostrophes in the title. Fixes