@@ -21,7 +21,7 @@
 					<label id="classlabel" for="class" i18n:translate="common_class_name"></label>
 					<div class="widget">
 						<select id="class" name="class" size="1">
-							<option value="plain" selected="selected" i18n:translate="common_not_set"></option>
+							<option value="plain" selected="selected" i18n:translate="Subdued grid">Subdued grid</option>
 						</select>
 					</div>
 				</div>
